--- a/fp/fp.html
+++ b/fp/fp.html
@@ -86,7 +86,7 @@
 	<hr>
 
 	<div class="container">
-		<p class="text-muted">Disclaimer: The current price per share shown is the price at the moment you load the webpage. Please refresh before you sell to get the most updated price. When buying shares, the price per share shown is the price at the moment you enter the stock symbol. The price will update automatically and charge the price per share at the time you press "Purchase Shares." This should not be more than a few cents differential between what is shown and what you pay (if anything at all).</p>
+		<p class="text-muted">Disclaimer: The current price per share shown is the price at the moment you load the webpage. Please refresh before you sell to get the most updated price as the price sold will be the price at the moment you hit "Sell," not necessarily what you see. When buying shares, the price per share shown is the price at the moment you enter the stock symbol. The price will update automatically and charge the price per share at the time you press "Purchase Shares." This should not be more than a few cents differential between what is shown and what you pay (if anything at all).</p>
 		<a class="pt-5" href="https://iexcloud.io">Data provided by IEX Cloud</a>
 	</div>
 
