--- a/fp/fp.html
+++ b/fp/fp.html
@@ -13,8 +13,8 @@
 
   	<div class="bg">
   		<div class="ml-3">
-	  		<h1 class="pt-5">The Bull and Bear</h1>
-	  		<p class="ml-1">Trading Made Simple.</p>
+	  		<p class="pt-5">The Bull and Bear</p>
+	  		<p class="ml-1 sub">Trading Stocks Made Simple.</p>
 	  		<a href="#buy" id="test" class="btn btn-primary mt-3" role="button">Purchase Shares</a>
 	  		<a href="#portfolio" class="btn btn-primary mt-3 ml-3" role="button">Review Portfolio and Sell</a>
 	  	</div>
