--- a/hw4/index.html
+++ b/hw4/index.html
@@ -11,16 +11,16 @@
 
   <body>
   	<div class="text-center">
-      <h1 class="outlined">Asteroids Near Earth in the Next Week</h1>
+      <h1 class="mt-3 outlined">Asteroids Near Earth in the Next Week</h1>
       <div class="mt-3 mb-5">
-        <h5 class="mt-5 outlined">Click on the buttons below to see the asteroids that NASA deem to be potentially hazerdous!</h5>
+        <h5 class="mt-5 outlined">Click on the buttons below to see the asteroids that NASA deem to be potentially hazerdous this week!</h5>
         <a id="mostHazerdousByDate" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Date</a>
         <a id="mostHazerdousByDiameter" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Max Diameter</a>
         <a id="mostHazerdousByDistance" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Miss Distance</a>
         <div id="WMHCards">
         </div>
       </div>
-	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!</h5>
+	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!<br/><br/>Enjoy the background image provided by APOD. Description: <span id="desc"></span></h5>
       <div id="navigators">
       </div>
 	   </div>
