--- a/hw4/index.html
+++ b/hw4/index.html
@@ -8,33 +8,23 @@
     <link rel="stylesheet" href="index.css">
     <title>Asteroids Near Earth</title>
   </head>
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-  	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <title>Asteroids Near Earth</title>
-  </head>
 
   <body>
   	<div class="text-center">
       <h1 class="mt-3 outlined">Asteroids Near Earth in the Next Week</h1>
       <div class="mt-3 mb-5">
         <h5 class="mt-5 outlined">Click on the buttons below to see the asteroids that NASA deem to be potentially hazerdous this week!</h5>
-        <a id="mostHazerdousByDate" class="btn btn-primary m1-" href="#">NASA's Weekly Potentially Hazerdous by Date</a>
-        <a id="mostHazerdousByDiameter" class="btn btn-primary m-1" href="#">NASA's Weekly Potentially Hazerdous by Max Diameter</a>
-        <a id="mostHazerdousByDistance" class="btn btn-primary m-1" href="#">NASA's Weekly Potentially Hazerdous by Miss Distance</a>
-        <a id="mostHazerdousByVelocity" class="btn btn-primary m-1" href="#">NASA's Weekly Potentially Hazerdous by Relative Velocity</a>
+        <a id="mostHazerdousByDate" class="btn btn-primary m-1" href="#">By Date</a>
+        <a id="mostHazerdousByDiameter" class="btn btn-primary m-1" href="#">By Max Diameter</a>
+        <a id="mostHazerdousByDistance" class="btn btn-primary m-1" href="#">By Miss Distance</a>
+        <a id="mostHazerdousByVelocity" class="btn btn-primary m-1" href="#">By Relative Velocity</a>
         <div id="WMHCards">
         </div>
       </div>
-	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size and velocity of the asteroid, as those over 0.2 miles and going faster than 40,000 mi/hr could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!<br/><br/>Enjoy the background image provided by APOD. Description: <span id="desc"></span></h5>
+	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size and velocity of the asteroid, as those over 0.2 miles and/or going faster than 40,000 mi/hr could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!<br/><br/>Enjoy the background image provided by APOD. Description: <span id="desc"></span></h5>
       <div id="navigators">
       </div>
-	   </div>
+	</div>
 
   	<div id="asteroids">
   	</div>
@@ -49,31 +39,3 @@
   </body>
 </html>
 
-  <body>
-  	<div class="text-center">
-      <h1 class="mt-3 outlined">Asteroids Near Earth in the Next Week</h1>
-      <div class="mt-3 mb-5">
-        <h5 class="mt-5 outlined">Click on the buttons below to see the asteroids that NASA deem to be potentially hazerdous this week!</h5>
-        <a id="mostHazerdousByDate" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Date</a>
-        <a id="mostHazerdousByDiameter" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Max Diameter</a>
-        <a id="mostHazerdousByDistance" class="btn btn-primary" href="#">NASA's Weekly Potentially Hazerdous by Miss Distance</a>
-        <div id="WMHCards">
-        </div>
-      </div>
-	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size of the asteroid, as those over 0.2 miles could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!<br/><br/>Enjoy the background image provided by APOD. Description: <span id="desc"></span></h5>
-      <div id="navigators">
-      </div>
-	   </div>
-
-  	<div id="asteroids">
-  	</div>
-
-	   <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <script src="index.js"></script>
-
-  </body>
-</html>
