--- a/hw4/index.html
+++ b/hw4/index.html
@@ -21,10 +21,14 @@
         <div id="WMHCards">
         </div>
       </div>
-	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size and velocity of the asteroid, as those over 0.2 miles and/or going faster than 40,000 mi/hr could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020. Meteor can get it done!<br/><br/>Enjoy the background image provided by APOD. Description: <span id="desc"></span></h5>
+	  	<h5 class="mt-5 outlined">See below for all asteroids passing by Earth in the next week by date. You can also click on a date button to navigate to that day on the screen. On a given day, asteroids are sorted by the ones that NASA deem to be the most dangerous and then by those passing closest to the Earth. Note, also, the size and velocity of the asteroid, as those over 0.2 miles and/or going faster than 40,000 mi/hr could cause catastrophic damage. These asteroids are highlighted, even if they are not passing close to the Earth and NASA does not deem them a threat, because a slight change in trajectory could doom the Earth! Might not be a bad thing to just start from scratch, though. That's why I'm asking for donations for Meteor 2020.Meteor can get it done!</h5>
       <div id="navigators">
       </div>
-	</div>
+      <h5 class="outlined">Enjoy the background image or video below provided by APOD. The background image or video is entitiled: <b><span id="title"></span></b>.</h5>
+      <h5 class="mb-5 outlined"><b>Description: </b><span id="desc"></span></h5>
+      <div id="potVideo">
+      </div>
+	  </div>
 
   	<div id="asteroids">
   	</div>
