--- a/fp/fp.html
+++ b/fp/fp.html
@@ -14,9 +14,9 @@
   	<div class="bg">
   		<div class="ml-3">
 	  		<p class="pt-5 header">The Bull and Bear</p>
-	  		<p class="ml-1 sub">Trading Stocks Made Simple.</p>
-	  		<a href="#buy" id="test" class="btn btn-primary mt-3" role="button">Purchase Shares</a>
-	  		<a href="#portfolio" class="btn btn-primary mt-3 ml-3" role="button">Review Portfolio and Sell</a>
+	  		<p class="pb-4 sub">Trading Stocks Made Simple.</p>
+	  		<a href="#buy" id="test" class="btn btn-primary btn-lg mt-3" role="button">Purchase Shares</a>
+	  		<a href="#portfolio" class="btn btn-primary btn-lg mt-3 ml-3" role="button">Review Portfolio and Sell</a>
 	  	</div>
 	</div>
 	<hr>
